<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="180dp"
               app:cardBackgroundColor="@android:color/black"
               app:cardUseCompatPadding="true"
               app:cardCornerRadius="20dp"
               app:cardElevation="10dp">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/SimpleHttp"
                        android:text="@string/SimpleHttp"
                        android:textSize="30dp"
                        android:textColor="#FFFF"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/SimpleHttp_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/SimpleHttp_button" />
           </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardBackgroundColor="@android:color/black"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/StockMonitor"
                android:text="@string/StockMonitor"
                android:textSize="30dp"
                android:textColor="#FFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/StockMonitor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/StockMonitor_button" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardBackgroundColor="@android:color/black"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/StockMonitorV2"
                android:text="@string/StockMonitorV2"
                android:textSize="30dp"
                android:textColor="#FFFF"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/StockMonitorV2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/StockMonitorV2_button" />
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>