<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockMonitorV2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stockV2_recycleView"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </android.support.v7.widget.RecyclerView>

        <EditText
            android:id="@+id/Stock_name"
            android:hint="@string/Stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:id="@+id/Stock_id"
                android:hint="@string/Stock_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>